hphp/test/zend/good/ext/gd/tests/imagefilledpolygon_negative.php.skipif
<?hh 
	if (!function_exists('imagefilledpolygon')) die('skip imagefilledpolygon() not available'); 
