hphp/test/zend/bad/ext/standard/tests/time/001.php.skipif
<?php 
	if (!function_exists('microtime'))  die('skip microtime() not available'); 
	die('warn system dependent');
?>